# migasfree-agent

./: .gitignore  README.md  build.bat  build.sh  pyproject.toml
.github/workflows/: build.yml
agent/: migasfree-agent
packaging/deb/DEBIAN/: control  postinst  prerm
packaging/deb/lib/systemd/system/: migasfree-agent.service
packaging/rpm/SPECS/: migasfree-agent.spec
packaging/windows/: install.bat  uninstall.bat
