[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migasfree-agent"
version = "1.0.0"
description = "Multi-protocol TCP tunnel agent for remote access via SSH, VNC, RDP through WebSocket tunnels"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPLv3"}
authors = [
    {name = "Alberto Gacías", email = "alberto@migasfree.org"},
    {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
]
keywords = ["migasfree", "agent", "tunnel", "ssh", "vnc", "rdp", "websocket", "remote-access"]
dependencies = [
    "requests>=2.28.0",
    "websockets>=10.0",
    "migasfree-client>=5.0",
    "dataclasses;python_version<'3.7'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://migasfree.org/"
Repository = "https://github.com/migasfree/migasfree-agent/"
Documentation = "https://github.com/migasfree/fun-with-migasfree"
Issues = "https://github.com/migasfree/migasfree-agent/issues"

[project.scripts]
migasfree-agent = "migasfree_agent.agent:main"

[tool.setuptools]
packages = ["migasfree_agent"]

[tool.setuptools.package-data]
migasfree_agent = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py36"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP007",  # use X | None instead of Optional[X] (keep Optional for 3.8 compat)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
